go-performance-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-performance-backend
  labels:
    app: go-performance-backend
    service: go-performance-backend
spec:
  #type: LoadBalancer
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  selector:
    app: go-performance-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-performance-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-performance-backend
      version: v1
  template:
    metadata:
      labels:
        app: go-performance-backend
        version: v1
    spec:
      serviceAccountName: go-performance-backend
      containers:
        - image: niteshsince1982/go-performance-backend:1.0
          imagePullPolicy: IfNotPresent
          name: go-performance-backend
          ports:
            - containerPort: 9090
