performance-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: perfvs
spec:
  hosts:
    - "perf.neuron.wdf.sap.corp"
  gateways:
    - cpigateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 9090
            host: go-performance-backend.performance.svc.cluster.local
